Added args to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,20 @@ services:
   ba-identity:
     build: ./ba-identity
     ports:
-      - "5011:8080" # 5011 used for public access
+      - "5011:8080"
     volumes:
       - /C/Users/Vadim/Documents/db:/usr/db
   ba-api:
     build: ./ba-api
     ports:
-      - "5010:8080" # 5010 used for public access
+      - "5010:8080"
     volumes:
       - /C/Users/Vadim/Documents/db:/usr/db
   ba-web:
-    build: ./ba-web
+    build:
+      context: ./ba-web
+      args:
+        - REACT_APP_IDENTITY_URL=http://budgets-app:5011
+        - REACT_APP_BASE_URL=http://budgets-app:5010/graphql
     ports:
-      - "5012:80" # 5012 used for public access
-    environment:
-      - REACT_APP_IDENTITY_URL=http://ba-identity:8080
-      - REACT_APP_BASE_URL=http://ba-api:8080
+      - "5012:80"
