--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     build:
       context: ./ba-web
       args:
-        - REACT_APP_IDENTITY_URL=http://budgets-app:5011
-        - REACT_APP_BASE_URL=http://budgets-app:5010/graphql
+        - REACT_APP_IDENTITY_URL=http://budgetsapp.com:5011
+        - REACT_APP_BASE_URL=http://budgetsapp.com:5010/graphql
     ports:
-      - "5012:80"
+      - "80:80"
